force-app/main/default/objects/animalos__Polygon__c/animalos__Polygon__c.object-meta.xml
<CustomObject>
    <label>Polygon</label>
    <nameField>
        <label>Polygon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polygons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>