force-app/main/default/objects/animalos__Polygon__c/fields/animalos__Area__c.field-meta.xml
<CustomField>
    <fullName>animalos__Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <referenceTo>animalos__Area__c</referenceTo>
    <relationshipLabel>Polygons</relationshipLabel>
    <relationshipName>Polygons</relationshipName>
    <type>Lookup</type>
</CustomField>