force-app/main/default/objects/animalos__Polygon__c/fields/animalos__Coordinates__c.field-meta.xml
<CustomField>
    <fullName>animalos__Coordinates__c</fullName>
    <label>Coordinates</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>