force-app/main/default/objects/animalos__Polygon__c/fields/animalos__Latitudes__c.field-meta.xml
<CustomField>
    <fullName>animalos__Latitudes__c</fullName>
    <label>Latitudes__c</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>