force-app/main/default/objects/animalos__Polygon__c/fields/animalos__Longitudes__c.field-meta.xml
<CustomField>
    <fullName>animalos__Longitudes__c</fullName>
    <label>Longitudes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>