force-app/main/default/objects/animalos__Polygon__c/fields/animalos__Max_Latitude__c.field-meta.xml
<CustomField>
    <fullName>animalos__Max_Latitude__c</fullName>
    <label>Max Latitude</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>