force-app/main/default/objects/animalos__Polygon__c/fields/animalos__Min_Longitude__c.field-meta.xml
<CustomField>
    <fullName>animalos__Min_Longitude__c</fullName>
    <label>Min Longitude</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>